--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -178,3 +178,14 @@
   year={2007},
   publisher={Springer}
 }
+
+@article{williams1992practical,
+  title={Practical use of distributions in network analysis},
+  author={Williams, TM},
+  journal={Journal of the Operational Research Society},
+  volume={43},
+  number={3},
+  pages={265--270},
+  year={1992},
+  publisher={Springer}
+}
