(Nearly) finished section 4

--- a/Annual Review 2019 Report/OneYearReport 0.1.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.1.tex
@@ -222,33 +222,21 @@ After realizing this I effectively started over with this new vessel structure i
 Reflecting on these failed attempts, I reckon they originated from me starting the work on the simulator while I was still reading essential parts of the literature. Whilst developing this model, I read about other models for very similar projects, leading me to new realizations about my own model. As I now feel much more caught up with the current literature, I am confident mistakes like this are much less likely to happen again. 
 
 \subsection{Future developments} \label{ss:simfut}
+\subsubsection{Inputs and outputs} \label{sss:inou}
 In the plans I have for this simulator, a lot of things will be added on top of what I currently have. First of all, I want inputs to be read from an excel sheet, and outputs to be written to a different sheet. These inputs would include the task information; precedence relations, weather restrictions, release date, assigned vessel, whether it can be interrupted partway through, etc.  The duration of a task would obviously also be included, but since this duration would no longer be deterministic multiple values need to be decided. Initially I am planning on having tasks follow a triangular distribution, as this is common and practical in scheduling problems \cite{williams1992practical}. This would mean the input for the duration of each task would have a lower and upper limit, and a mode. Potentially this could be changed in the future, giving tasks a more sophisticated probability distribution (possibly depending on the weather conditions), but for my initial experiments I am not planning on doing so.
 
 Technically, this is all the input that is required. Vessel characteristics such as speed and capacity are not required since every action a vessel has to perform is a task in the input. Therefore the speed of a vessel is represented by the duration of the transit task. However, this is an impractical way of giving input. Therefore I am also planning on having a tool to generate the input described above. As input it would take the actual operations required to be done on site and their details, and the vessel characteristics. The operation details are the same as mentioned previously for tasks: duration (as described above), precedence relations, weather restrictions, release date, assigned vessel, whether it can be interrupted partway through. However, these tasks would only correspond to the actual installation or maintenance operations the related vessels need to perform. All other tasks (transits on the OWF site, transits between the port and the site, loading tasks at the port, all tasks for supply barges) can be derived from this when the vessel characteristics (and required supplies per task) are given. These vessel characteristics will also be an input for this tool, and will include: average transit speed on the site, average transit speed between the port and the OWF site, average speed of loading on a single asset, weather restrictions for loading and transit tasks, and capacity. 
 
-While this all is technically enough input to run the simulations, the aspect of cost should also be included as one of the desired output metrics will be the cost of the project. All costs and profits will be subject to a discount rate. For the on-site operations, a supply cost should be included, which is incurred during the loading task preceding that operation. Additionally any extra costs charged by the vessel provider for certain types of operations should also be included. For vessels, day rates and (de)commissioning costs will be part of the input. A mechanism can be put in place that only allows for vessels to be (de)commissioned when given notice or at certain moments (such as the end of a week). How exactly this works can be determined in the input file, through a selection of settings. To oppose the costs, the profit gained from a working WTG should also be given. This profit will initially be represented as a flat rate per WTG based on the month of the year. A potential future improvement is to make it depended on the actual simulated wind speeds, but this is not currently planned to be experimented with in this research. Other basic simulation settings will also be part of the input, such as the number of simulations to run and the type of output to give. 
+While this all is technically enough input to run the simulations, the aspect of cost should also be included as one of the desired output metrics will be the cost of the project. All costs and profits will be subject to a discount rate. For the on-site operations, a supply cost should be included, which is incurred during the loading task preceding that operation. Additionally any extra costs charged by the vessel provider for certain types of operations should also be included. For vessels, day rates and (de)commissioning costs will be part of the input. A mechanism can be put in place that only allows for vessels to be (de)commissioned when given notice or at certain moments (such as the end of a week). How exactly this works can be determined in the input file, through a selection of settings. To oppose the costs, the profit gained from a working WTG should also be given. This profit will initially be represented as a flat rate per WTG based on the month of the year. A potential future improvement is to make it depended on the actual simulated wind speeds, but this is not currently planned to be experimented with in this research. Other basic simulation settings will also be part of the input, such as the number of simulations to run and the type of output to give.
 
-The main output is data regarding the variability of both the costs and makespan of a given project (installation or maintenance). Probabilistic measures on the cost and duration on the project will be recorded over all simulations. These can be used to focus in on vulnerable aspects and look at the expected time and cost certain phases of the project will take (for example, a 90\% confidence interval on when 10\% of the WTGs will be online). Specific cost related measures will also be able to be found, such as the expected time the project becomes profitable, the net present value of the project, and exact data on the spending and profit every month. 
+Additionaly an input signifying the start date of the project is useful. This matters for the weather simulation, as it is dependant on the time of year. This could be done through an inital task with a release date on the desired start date, but by giving a specific start date for the project all other release dates can be made relative to it, which is convienent when a single schedule is to be tested with various start dates. Potentially I can also add inputs for non-operational periods; for example if we want to pause operations over the most severe winter months. However I am not currently planning on adding that specifically; these experiments can still be done, but through the start dates of tasks. For example if a project will be performed over two summers, but the work will be halted during the winter in between, every task scheduled to be performed in the second summer can simply have a starting date after operations resume. This allows tasks in the first summer to be completed even if they take longer than the planned start of the break. However if it turns out it is desired to have a hard cutoff point after which all operations will halt even if they were planned to be completed in the previous phase of the project, this functionality can be added. 
 
-%TODO:
-%Outputs (statistics, costs)
-%Crew breaks
-%Weather model (measures, correlation and autoregression, forecasts)
-%Weather affecting task duration
-%Start dates and break periods
-%UML diagram of program setup and model
+The main output is data regarding the variability of both the costs and makespan of a given project (installation or maintenance). Probabilistic measures on the cost and duration on the project will be recorded over all simulations. These can be used to focus in on vulnerable aspects and look at the expected time and cost certain phases of the project will take (for example, a 90\% confidence interval on when 10\% of the WTGs will be online). Focussing in on measures for categories of tasks will also be possible, like every task performed by a certain vessel or of a specific type. Specific cost related measures will also be able to be found, such as the expected time the project becomes profitable, the net present value of the project, and exact data on the spending and profit every month. 
 
+\subsubsection{Weather model} \label{sss:inou}
+As the weather conditions are clearly dependent on the time of year, I plan to split the data based on the month it occured. Apart from that I have not yet fully decided on the specifics of the weather model to generate synthetic weather series. It will be a multivariate autoregression model including wind speed and wave height, where the two measures are also correlated correlated. The model I will end up using will likely inspired by the models used in the previously mentioned research \cite{dinwoodie2014operational} (also used in \cite{barlow2018mixed}) and \cite{kerkhove2017optimised} as both of these models appear to be adequate.
 
-
-%\pagebreak
-
-%Currently it simulates a fixed set of different vessels that each have a schedule of tasks they aim to complete in the shortest timespan, but this can be changed based on the model design. In my current implementation, task duration is deterministic and independent of the weather conditions, but this will obviously be changed when an actual model is being tested. When a vessel cannot perform a certain task during the current weather conditions, it will wait at a designated spot, but it could also end up waiting near the location of its next task. The size of a single time step can be adjusted to most reasonable values without problems. 
-
-%Paragraph about implementation (c++ and matlab)
-%The simulator has been implemented in C++, as it seems well suited for this. A benefit is that C++ can easily be combined with Matlab, which I am planning to implement the optimisation model in, as it is very suited for such uses and this will hopefully lead to a efficient implementation. While I am not yet proficient with Matlab, I have started learning it and I think I can then let the optimisation model in Matlab and the simulation model in C++ work together in a way useful for the model. 
-
-%Paragraph about its uses
-%My goal for this simulator is for it to be usable as a tool in most of the likely research directions my PhD can go. The way it is currently set up the simulator is most suitable for fixed-task projects such as installation and decommission of the energy sites. However it is possible to adapt the simulator for other types of projects such as the maintenance of the site. In \Cref{s:concl} I will discuss various research directions; the simulator could be used for each of those directions. 
+%TODO add UML diagram of program setup and model
 
 \pagebreak
 
